--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas==2.1.4
+pandas>=2.2.0
 plotly==5.17.0
 dash==2.14.2
-numpy==1.26.2
-matplotlib==3.8.2
+numpy>=1.26.2
+matplotlib>=3.9.0
 seaborn==0.13.0
 gunicorn==21.2.0
 jupyter==1.0.0
